@@ -1,9 +1,10 @@
 File Name: CHANGES
 
-04/26/2018 FASP 2.1.0:
+05/02/2018 FASP 2.1.0:
 - Fix OpenMP problem with FASP1.
 - Fix a typo in KryPvfgmres.c.
-- Update regression results. 
+- Update regression results.
+- Update FD for Poisson/Heat example.
 
 04/11/2018 FASP 2.0.9:
 - Update Fortran wrappers: add a new one.
